# CoD2x

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: _template.cpp.in  _template.h.in
src/embedded/: iw_CoD2x_01.iwd
src/embedded/iw_CoD2x_01/images/: radar_mp_burgundy.iwi  radar_mp_railyard_mjr.iwi  radar_mp_toujane.iwi  radar_player_arrow.iwi  radar_player_circle.iwi  radar_player_fire.iwi
src/embedded/iw_CoD2x_01/maps/mp/: mp_burgundy.radar  mp_railyard_mjr_test1.radar  mp_toujane.radar
src/embedded/iw_CoD2x_01/materials/: radar_player_arrow  radar_player_circle  radar_player_fire
src/embedded/iw_CoD2x_01/ui_mp/: main.menu
src/linux/: hook.cpp  updater.cpp  updater.h
src/mss32/: admin.cpp  admin.h  affinity.cpp  affinity.h  cgame.cpp  cgame.h  competitive.cpp  competitive.h  debug.cpp  debug.h  downloading.cpp  downloading.h  drawing.cpp  drawing.h  error.cpp  error.h  exception.cpp  fps.cpp  freeze.cpp  freeze.h  hook.cpp  hook.h  hotreload.cpp  hotreload.h  hwid.cpp  hwid.h  main.cpp  main.h  master_server.cpp  master_server.h  radar.cpp  radar.h  registry.cpp  registry.h  rinput.cpp  shared.cpp  shared.h  system.cpp  system.h  updater.cpp  (+6 more)
src/other/: gfx_addresses.xlsx
src/shared/: animation.cpp  animation.h  assembly.h  cod2_client.h  cod2_cmd.h  cod2_common.h  cod2_definitions.h  cod2_dvars.h  cod2_entity.h  cod2_file.h  cod2_math.h  cod2_net.h  cod2_player.h  cod2_script.h  cod2_server.h  cod2_shared.h  common.cpp  common.h  dvar.cpp  dvar.h  game.cpp  game.h  gsc.cpp  gsc.h  gsc_http.cpp  gsc_http.h  gsc_match.cpp  gsc_match.h  gsc_player.cpp  gsc_player.h  gsc_test.cpp  gsc_test.h  gsc_websocket.cpp  gsc_websocket.h  http_client.h  iwd.cpp  iwd.h  json.h  logger.cpp  logger.h  (+9 more)
tools/openssl_mingw/include/openssl/: asn1.h  asn1t.h  bio.h  cmp.h  cms.h  conf.h  configuration.h  core_names.h  crmf.h  crypto.h  ct.h  ess.h  fipskey.h  ocsp.h  opensslv.h  pkcs12.h  pkcs7.h  safestack.h  srp.h  ssl.h  ui.h  x509.h  x509_vfy.h  x509v3.h
tools/openssl_mingw/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
tools/wsl/: WSL_run.bat
